--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "i18next-express-middleware": "1.0.2",
         "i18next-node-fs-backend": "0.1.3",
         "i18next-xhr-backend": "1.3.0",
-        "jade": "1.x.x",
+        "pug": "2.0.0-beta6",
         "jquery": "3.1.x",
         "jszip": "3.1.x",
         "jwt-simple": "0.5.x",
@@ -91,7 +91,7 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.2.x",
         "mocha": "3.2.x",
-        "phantomjs": "2.1.x",
+        "phantomjs-prebuilt": "2.1.x",
         "sinon": "1.17.x",
         "sinon-chai": "2.8.x",
         "supertest": "2.0.x"
