--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
         "grunt-browserify": "5.0.x",
-        "grunt-contrib-uglify": "2.0.x",
+        "grunt-contrib-uglify": "2.2.x",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.1.x",
         "grunt-sass": "2.0.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "6.0.x",
+        "i18next": "7.1.1",
         "i18next-browser-languagedetector": "1.0.1",
         "i18next-express-middleware": "1.0.2",
         "i18next-node-fs-backend": "0.1.3",
@@ -56,7 +56,7 @@
         "jquery": "3.1.x",
         "jszip": "3.1.x",
         "jwt-simple": "0.5.x",
-        "libxslt": "0.6.3",
+        "libxslt": "0.6.5",
         "lie": "3.1.x",
         "load-grunt-tasks": "3.x.x",
         "lodash": "4.17.x",
