--- a/setup/redis/conf/redis-enketo-cache.conf
+++ b/setup/redis/conf/redis-enketo-cache.conf
@@ -1,6 +1,8 @@
 # Redis configuration for Enketo's XSLT Cache
 
-daemonize yes
+supervised systemd
+
+daemonize no
 
 pidfile /var/run/redis/redis-enketo-cache.pid
 
@@ -59,4 +61,4 @@ client-output-buffer-limit pubsub 32mb 8mb 60
 hz 10
 aof-rewrite-incremental-fsync yes
 
-include /etc/redis/conf.d/local.conf
+#include /etc/redis/conf.d/local.conf
