--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
         "grunt-browserify": "5.0.x",
-        "grunt-contrib-uglify": "2.2.x",
+        "grunt-contrib-uglify": "2.3.x",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.1.x",
         "grunt-sass": "2.0.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "7.1.2",
-        "i18next-browser-languagedetector": "1.0.1",
-        "i18next-express-middleware": "1.0.2",
-        "i18next-node-fs-backend": "0.1.3",
-        "i18next-xhr-backend": "1.3.0",
+        "i18next": "7.2.x",
+        "i18next-browser-languagedetector": "1.0.x",
+        "i18next-express-middleware": "1.0.x",
+        "i18next-node-fs-backend": "0.1.x",
+        "i18next-xhr-backend": "1.4.x",
         "pug": "2.0.0-beta6",
         "jquery": "3.2.x",
         "jszip": "3.1.x",
@@ -81,7 +81,7 @@
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
         "i18next-parser": "0.11.1",
-        "karma": "1.5.0",
+        "karma": "1.6.0",
         "karma-browserify": "5.1.x",
         "karma-chrome-launcher": "2.0.x",
         "karma-firefox-launcher": "1.0.x",
@@ -89,11 +89,11 @@
         "karma-opera-launcher": "1.0.x",
         "karma-phantomjs-launcher": "1.0.x",
         "karma-safari-launcher": "1.0.x",
-        "karma-sinon-chai": "1.2.x",
+        "karma-sinon-chai": "1.3.x",
         "mocha": "3.2.x",
         "phantomjs-prebuilt": "2.1.x",
-        "sinon": "1.17.x",
-        "sinon-chai": "2.8.x",
+        "sinon": "2.1.x",
+        "sinon-chai": "2.9.x",
         "supertest": "3.0.x"
     },
     "aliasify": {
