--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.42.2",
+    "version": "1.43.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,8 +36,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
-        "enketo-core": "https://github.com/enketo/enketo-core.git#f390b60",
-        "enketo-transformer": "1.15.2",
+        "enketo-core": "4.29.1",
+        "enketo-transformer": "1.16.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
