--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
-        "enketo-core": "4.29.2",
+        "enketo-core": "https://github.com/enketo/enketo-core.git#e5e1edf",
         "enketo-transformer": "1.16.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -98,7 +98,6 @@
     },
     "aliasify": {
         "aliases": {
-            "text!enketo-config": "./public/temp-client-config.json",
             "enketo-config": "./public/temp-client-config.json",
             "widgets": "./public/js/src/module/widgets",
             "translator": "./public/js/src/module/translator",
