--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.48.0",
+    "version": "1.48.1",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,8 +36,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
-        "enketo-core": "https://github.com/enketo/enketo-core.git#23f72d6",
-        "enketo-transformer": "1.17.1",
+        "enketo-core": "4.36.0",
+        "enketo-transformer": "1.17.2",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
@@ -83,7 +83,7 @@
         "i18next-parser": "0.12.0",
         "karma": "1.7.0",
         "karma-browserify": "5.1.x",
-        "karma-chrome-launcher": "2.1.x",
+        "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.0.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
