--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.49.0",
+    "version": "1.50.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
-        "enketo-core": "https://github.com/enketo/enketo-core.git#23b7d30",
+        "enketo-core": "4.38.0",
         "enketo-transformer": "1.18.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -89,8 +89,8 @@
         "karma-opera-launcher": "1.0.x",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.3.x",
-        "mocha": "3.4.x",
-        "sinon": "2.3.x",
+        "mocha": "3.5.x",
+        "sinon": "3.0.x",
         "sinon-chai": "2.12.x",
         "supertest": "3.0.x"
     },
