--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "2.x.x",
-        "enketo-core": "4.38.2",
-        "enketo-transformer": "1.18.0",
+        "enketo-core": "https://github.com/enketo/enketo-core.git#1a17bbb",
+        "enketo-transformer": "1.19.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
