--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
         "cookie-parser": "1.4.x",
         "csurf": "1.9.x",
         "db.js": "0.15.0",
-        "debug": "2.x.x",
+        "debug": "3.0.x",
         "enketo-core": "4.39.0",
         "enketo-transformer": "1.19.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
-        "grunt-browserify": "5.0.x",
+        "grunt-browserify": "5.2.x",
         "grunt-contrib-uglify": "3.0.x",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.1.x",
@@ -62,7 +62,7 @@
         "lodash": "4.17.x",
         "morgan": "1.x.x",
         "papaparse": "4.3.x",
-        "redis": "2.7.1",
+        "redis": "2.8.0",
         "request": "2.81.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
@@ -81,7 +81,7 @@
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
         "i18next-parser": "0.12.0",
-        "karma": "1.7.0",
+        "karma": "1.7.x",
         "karma-browserify": "5.1.x",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.0.x",
@@ -90,8 +90,8 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.3.x",
         "mocha": "3.5.x",
-        "sinon": "3.0.x",
-        "sinon-chai": "2.12.x",
+        "sinon": "3.2.x",
+        "sinon-chai": "2.13.x",
         "supertest": "3.0.x"
     },
     "aliasify": {
