--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.51.1",
+    "version": "1.52.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.0.x",
-        "enketo-core": "https://github.com/enketo/enketo-core.git#7cdec91",
+        "enketo-core": "4.39.2",
         "enketo-transformer": "1.20.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
