--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
         "cookie-parser": "1.4.x",
         "csurf": "1.9.x",
         "db.js": "0.15.0",
-        "enketo-core": "https://github.com/enketo/enketo-core.git#a01cc30",
         "debug": "3.1.x",
+        "enketo-core": "4.39.3",
         "enketo-transformer": "1.21.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
