--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "https://github.com/enketo/enketo-core.git#38d2dda",
+        "enketo-core": "4.41.3",
         "enketo-transformer": "1.21.1",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -52,7 +52,6 @@
         "i18next-express-middleware": "1.0.x",
         "i18next-node-fs-backend": "1.0.x",
         "i18next-xhr-backend": "1.4.x",
-        "pug": "2.0.0-beta6",
         "jquery": "3.2.x",
         "jszip": "3.1.x",
         "jwt-simple": "0.5.x",
@@ -62,6 +61,7 @@
         "lodash": "4.17.x",
         "morgan": "1.x.x",
         "papaparse": "4.3.x",
+        "pug": "2.0.0-beta6",
         "redis": "2.8.0",
         "request": "2.83.x",
         "serve-favicon": "2.x.x",
