--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.55.2",
+    "version": "1.55.3",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -53,7 +53,7 @@
         "i18next-node-fs-backend": "1.0.x",
         "i18next-xhr-backend": "1.4.x",
         "jquery": "3.2.x",
-        "jszip": "3.1.x",
+        "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.5",
         "lie": "3.1.x",
