--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.41.3",
+        "enketo-core": "^4.41.4",
         "enketo-transformer": "1.21.1",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -82,7 +82,7 @@
         "gulp": "3.9.x",
         "i18next-parser": "0.12.0",
         "karma": "1.7.x",
-        "karma-browserify": "5.1.x",
+        "karma-browserify": "^5.1.2",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.0.x",
         "karma-mocha": "1.3.x",
