--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.41.7",
+        "enketo-core": "4.41.8",
         "enketo-transformer": "1.21.2",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -49,7 +49,7 @@
         "grunt-shell-spawn": "0.3.x",
         "i18next": "10.0.x",
         "i18next-browser-languagedetector": "2.0.x",
-        "i18next-express-middleware": "1.0.x",
+        "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "1.0.x",
         "i18next-xhr-backend": "1.4.x",
         "jquery": "3.2.x",
