--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.55.9",
+    "version": "1.55.10",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,13 +36,13 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.42.0",
-        "enketo-transformer": "1.21.4",
+        "enketo-core": "4.42.1",
+        "enketo-transformer": "1.21.5",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
         "grunt-browserify": "5.2.x",
-        "grunt-contrib-uglify": "3.2.x",
+        "grunt-contrib-uglify": "3.3.x",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.2.x",
         "grunt-sass": "2.0.x",
@@ -55,7 +55,7 @@
         "jquery": "3.2.x",
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
-        "libxslt": "0.7.0",
+        "libxslt": "0.6.5",
         "lie": "3.1.x",
         "load-grunt-tasks": "3.x.x",
         "lodash": "4.17.x",
@@ -81,7 +81,7 @@
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
         "i18next-parser": "0.12.0",
-        "karma": "1.7.x",
+        "karma": "^2.0.0",
         "karma-browserify": "^5.1.2",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.1.x",
