--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.42.3",
+        "enketo-core": "git+https://github.com/enketo/enketo-core.git#f6bbcdb",
         "enketo-transformer": "1.21.5",
         "express": "4.x.x",
         "file-saver": "1.3.x",
