--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.56.1",
+    "version": "1.57.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "git+https://github.com/enketo/enketo-core.git#3d29c46",
+        "enketo-core": "4.43.0",
         "enketo-transformer": "1.22.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -51,7 +51,7 @@
         "i18next-browser-languagedetector": "2.1.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "1.0.x",
-        "i18next-xhr-backend": "1.5.x",
+        "i18next-xhr-backend": "^1.5.1",
         "jquery": "3.2.x",
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
@@ -82,7 +82,7 @@
         "gulp": "3.9.x",
         "i18next-parser": "0.12.0",
         "karma": "^2.0.0",
-        "karma-browserify": "^5.1.2",
+        "karma-browserify": "^5.1.3",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.1.x",
         "karma-mocha": "1.3.x",
@@ -90,7 +90,7 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.3.x",
         "mocha": "4.0.x",
-        "sinon": "4.1.x",
+        "sinon": "^4.1.4",
         "sinon-chai": "2.14.x",
         "supertest": "3.0.x"
     },
