--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "db.js": "0.15.0",
         "debug": "3.1.x",
         "enketo-core": "4.43.0",
-        "enketo-transformer": "1.22.0",
+        "enketo-transformer": "git+https://github.com/enketo/enketo-transformer.git#80fa0ae",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
