--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.43.0",
-        "enketo-transformer": "git+https://github.com/enketo/enketo-transformer.git#80fa0ae",
+        "enketo-core": "4.44.0",
+        "enketo-transformer": "1.23.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "1.0.x",
@@ -90,7 +90,7 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.3.x",
         "mocha": "4.0.x",
-        "sinon": "^4.1.4",
+        "sinon": "^4.1.6",
         "sinon-chai": "2.14.x",
         "supertest": "3.0.x"
     },
