--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "grunt-shell-spawn": "0.3.x",
         "i18next": "^10.3.0",
         "i18next-browser-languagedetector": "2.1.x",
-        "i18next-express-middleware": "^1.0.9",
+        "i18next-express-middleware": "^1.0.10",
         "i18next-node-fs-backend": "1.0.x",
         "i18next-xhr-backend": "^1.5.1",
         "jquery": "3.3.x",
@@ -58,9 +58,9 @@
         "libxslt": "0.6.5",
         "lie": "3.1.x",
         "load-grunt-tasks": "3.x.x",
-        "lodash": "4.17.x",
+        "lodash": "^4.17.5",
         "morgan": "1.x.x",
-        "papaparse": "4.3.x",
+        "papaparse": "^4.3.7",
         "pug": "2.0.0-beta6",
         "redis": "2.8.0",
         "request": "2.83.x",
@@ -82,7 +82,7 @@
         "gulp": "3.9.x",
         "i18next-parser": "0.12.0",
         "karma": "^2.0.0",
-        "karma-browserify": "^5.1.3",
+        "karma-browserify": "^5.2.0",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.1.x",
         "karma-mocha": "1.3.x",
