--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.45.0",
+        "enketo-core": "git+https://github.com/enketo/enketo-core.git#79d9620",
         "enketo-transformer": "1.24.1",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -90,7 +90,7 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.3.x",
         "mocha": "4.0.x",
-        "sinon": "^4.2.2",
+        "sinon": "^4.3.0",
         "sinon-chai": "2.14.x",
         "supertest": "3.0.x"
     },
