--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.59.0",
+    "version": "1.60.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "git+https://github.com/enketo/enketo-core.git#bd72e66",
+        "enketo-core": "4.46.0",
         "enketo-transformer": "1.24.1",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -96,10 +96,11 @@
     },
     "aliasify": {
         "aliases": {
-            "enketo-config": "./public/temp-client-config.json",
-            "widgets": "./public/js/widgets",
-            "translator": "./public/js/src/module/translator",
-            "../../js/file-manager": "./public/js/src/module/file-manager"
+            "enketo/config": "./public/temp-client-config.json",
+            "enketo/widgets": "./public/js/widgets",
+            "enketo/translator": "./public/js/src/module/translator",
+            "enketo/dialog": "./public/js/src/module/dialog",
+            "enketo/file-manager": "./public/js/src/module/file-manager"
         }
     }
 }
