--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.46.0",
+        "enketo-core": "git+https://github.com/enketo/enketo-core.git#f638643",
         "enketo-transformer": "1.24.1",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -47,7 +47,7 @@
         "grunt-i18next": "0.2.x",
         "grunt-sass": "2.0.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "^10.3.0",
+        "i18next": "^10.4.1",
         "i18next-browser-languagedetector": "2.1.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "1.0.x",
