--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "i18next-node-fs-backend": "2.1.x",
         "i18next-xhr-backend": "3.1.x",
         "jquery": "^3.4.1",
+        "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.5",
