--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
         "mocha": "6.2.x",
+        "nock": "^11.3.4",
         "rimraf": "^3.0.0",
         "sinon": "7.4.x",
         "sinon-chai": "3.3.x",
