--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.7.2",
+        "enketo-core": "github:enketo/enketo-core#cb4df99c",
         "enketo-transformer": "1.34.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
