--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.11.0",
+        "enketo-core": "github:enketo/enketo-core#a30cec95",
         "enketo-transformer": "1.37.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
