--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.11.1",
+        "enketo-core": "github:enketo/enketo-core#54ca8f11",
         "enketo-transformer": "1.37.0",
         "express": "^4.17.1",
         "grunt": "^1.0.3",
