--- a/config/default-config.json
+++ b/config/default-config.json
@@ -29,7 +29,7 @@
         "note", "select-desktop", "select-mobile", "autocomplete", "geo", "textarea", "url",
         "table", "radio", "date", "time", "datetime", "select-media", "file", "draw", "rank",
         "likert", "range", "columns", "image-view", "comment", "image-map", "date-native", "date-native-ios",
-        "date-mobile", "text-max", "text-print", "rating"
+        "date-mobile", "text-max", "text-print", "rating", "thousands-sep"
     ],
     "analytics": "google",
     "google": {
